         ALWAYS_USE_TIMER defined for SDL
20040627 sound/sdlsound.c: Fuse generates 16 bit sound in signed host byte
         order.
20040628 ui/gtk/options.pl: improve user interface for text entry boxes
	 slightly.
20040701 configure.in,utils.c,ui/gtk/fileselector.c: check we have
	 <libgen.h> before #including it (thanks, Marek).
20040702 ui/gtk/debugger.c: add column headings to the memory map pane.
20040702 man/fuse.1: debugger docs update.
20040702 hacking/sound.txt,sound/sunsound.c: fix up for 16 bit sound
	 (compiles, but untested).
20040702 machines/tc2048.c,memory.c,scld.c,slt.c,zxatasp.c,zxcf.c:
         #include <string.h> for memcpy and memset prototypes.
20040702 configure.in,ui/Makefile.am: disable the broken and unmaintained
	 GGI user interface.
20040703 settings.dat,man/fuse.1,ui/options.dat,widget/menu.c: allow
	 selection between .szx and .z80 for snaps saved by the widget
	 UIs.
20040703 rzx.c: use libspectrum's new ability to select the embedded snap
	 format.
20040704 ui/uijoystick.h: remove unused kempston_bits and kempston_type
	 types.
20040704 configure.in: --without-gtk disables GTK+ 2.0 user interface
	 (Darren).
20040704 screenshot.c,sound.c,ui/ggi/ggidisplay.c,ui/gtk/gtkdisplay.c,
	 ui/scaler/scaler.c,ui/sdl/sdldisplay.c,ui/xlib/xdisplay.c,
	 z80/z80.[ch]: make some variables static and/or const where
	 appropriate (Darren).
20040704 timer.c: add calibration for the setitimer() routines (Darren).
20040705 configure.in: add missing comma.
20040706 menu.h: get initial comment filename right (thanks, Marek).
20040706 acinclude.m4: distribute the Glib 1.2, Glib 2.x, GTK+ 1.2, GTK+
	 2.x and libxml2 autoconf macros.
20040707 z80/z80.pl,z80/tests/edb[3b].out: make INI, OUTI, INIR, OTIR and
	 the D variants timings consistent with the FAQ.
20040707 acinclude.m4: update SDL macros to latest upstream.
20040708 timer.c: modify timer calibration slightly (Darren).
20040708 ui/fb/fbkeyboard.c: update for new input layer (Darren).